--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-  
+<!doctype html>
+<html lang="de-CH">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KI Assistent Dashboard</title>
+  <meta name="description" content="Persönliches Dashboard für deinen KI Assistenten" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1 class="welcome">Willkommen zurück, Luca 👋</h1>
+    <p class="subtitle">Übersicht deines persönlichen KI Assistenten</p>
+    <div class="header-actions">
+      <a class="button" href="stats.html">Statistik</a>
+    </div>
+  </header>
+
+  <main>
+
       <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">📋</div>
