--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <main>
 
+    <section class="features-section">
       <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">📋</div>
@@ -27,7 +28,6 @@
         </div>
       </div>
     </section>
-  </main>
 
   <!-- Aufgabenmanagement Sektion -->
   <section class="tasks-section">
@@ -121,6 +121,8 @@
       </div>
     </div>
   </section>
+
+  </main>
 
   <footer>
     <small>&copy; <span id="year"></span> Dein persönlicher KI Assistent | Datenschutz & Sicherheit gewährleistet</small>
