--- a/stats.html
+++ b/stats.html
@@ -1,149 +1,111 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de-CH">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Statistik — Abend-Check</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Statistik — AI Dashboard</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="site-header"><h1>Statistik</h1><nav><a href="index.html">Dashboard</a></nav></header>
-  <main class="grid">
-    <section class="card">
-      <h2>Zeitraum</h2>
-      <div class="row" style="margin-top:8px">
-        <button data-days="7">7 Tage</button>
-        <button data-days="30">30 Tage</button>
-        <button data-days="60">60 Tage</button>
-        <button data-days="90">90 Tage</button>
-      </div>
-      <div id="stats" class="muted" style="margin-top:12px">Wähle einen Zeitraum.</div>
-    </section>
-  </main>
-  <footer class="site-footer"><small>Statistik aus localStorage (dailyChecks).</small></footer>
-
-  <script>
-  function load(key, def){ try{return JSON.parse(localStorage.getItem(key))||def}catch(e){return def} }
-  function compute(days){ const arr = load('dailyChecks',[]); if(!arr.length) return 'Keine Einträge.'; const cutoff = new Date(); cutoff.setDate(cutoff.getDate()-days+1); const sel = arr.filter(x=>new Date(x.date) >= cutoff); if(!sel.length) return 'Keine Einträge im Zeitraum.'; const avg = (k)=> (sel.reduce((s,x)=>s+(x[k]||0),0)/sel.length).toFixed(1); return `Auswahl: ${sel.length} Einträge — Stimmung ${avg('mood')}, Energie ${avg('energy')}, Stress ${avg('stress')}`; }
-  document.querySelectorAll('button[data-days]').forEach(b=> b.addEventListener('click', ()=>{ document.getElementById('stats').textContent = compute(+b.dataset.days); }));
-  </script>
-</body>
-</html>
-<!doctype html>
-<html lang="de-CH">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Statistik - Täglicher Check</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
   <header>
-    <h1 class="welcome">Statistiken — Täglicher Check</h1>
-    <p class="subtitle">Letzte Checks visualisiert (7 / 30 / 60 / 90 Tage)</p>
-    <div style="margin-top:12px;"><a class="button" href="index.html">← Zurück</a></div>
+    <h1>Statistik</h1>
+    <nav>
+      <a href="index.html">Startseite</a>
+      <a href="stats.html">Statistik</a>
+    </nav>
   </header>
 
-  <main style="max-width:1000px;margin:0 auto;padding:20px 0;">
-    <div class="stats-controls">
-      <button class="tab active" onclick="renderAll()">7 Tage</button>
-      <button class="tab" onclick="renderRange(30)">30 Tage</button>
-      <button class="tab" onclick="renderRange(60)">60 Tage</button>
-      <button class="tab" onclick="renderRange(90)">90 Tage</button>
-    </div>
+  <main>
+    <section class="card">
+      <h2>Abend-Check Analyse</h2>
+      <form id="stats-form">
+        <label>
+          Zeitraum:
+          <select id="range-select">
+            <option value="7">Letzte 7 Tage</option>
+            <option value="30">Letzte 30 Tage</option>
+            <option value="60">Letzte 60 Tage</option>
+            <option value="90">Letzte 90 Tage</option>
+          </select>
+        </label>
+        <button type="submit">Anzeigen</button>
+      </form>
+      <div id="stats-result"></div>
+    </section>
 
-    <div id="statsContent">
-      <!-- Stats injected here -->
-    </div>
+    <section class="card">
+      <h2>Einträge</h2>
+      <ul id="checks-list"></ul>
+    </section>
   </main>
 
+  <footer>
+    <p>Statistiken basieren auf Einträgen im Browser-Speicher.</p>
+  </footer>
+
   <script>
-    function loadChecks() {
-      try {
-        return JSON.parse(localStorage.getItem('dailyChecks') || '[]');
-      } catch (e) {
-        return [];
-      }
-    }
+    // Helper
+    const db = {
+      get(key) { try { return JSON.parse(localStorage.getItem(key)) || []; } catch(e) { return []; } }
+    };
 
-    function daysAgo(dateIso, days) {
-      const target = new Date();
-      target.setDate(target.getDate() - days);
-      return new Date(dateIso) >= new Date(target.toDateString());
-    }
+    const rangeSelect = document.getElementById('range-select');
+    const statsResult = document.getElementById('stats-result');
+    const checksList = document.getElementById('checks-list');
 
-    function computeStatsForRange(days) {
-      const checks = loadChecks();
-      if (days === 7) {
-        // last 7 days
+    function computeStats(days) {
+      const checks = db.get('dailyChecks');
+      if (!checks.length) {
+        return '<p>Noch keine Einträge vorhanden.</p>';
       }
+
       const cutoff = new Date();
-      cutoff.setDate(cutoff.getDate() - days + 1);
-      const filtered = checks.filter(c => new Date(c.date) >= cutoff);
+      cutoff.setDate(cutoff.getDate() - days);
 
-      // Average mood (question id 1), energy id 3, stress id 4 (multiple-choice index -> map)
-      const moodVals = filtered.map(c => c.answers[1]).filter(v => v !== undefined);
-      const energyVals = filtered.map(c => c.answers[3]).filter(v => v !== undefined);
-      const stressVals = filtered.map(c => c.answers[4]).filter(v => v !== undefined);
+      const filtered = checks.filter(c => new Date(c.date) > cutoff);
+      if (!filtered.length) {
+        return `<p>Keine Einträge in den letzten ${days} Tagen.</p>`;
+      }
 
-      const avg = arr => arr.length ? (arr.reduce((a,b)=>a+b,0)/arr.length) : null;
-      const avgMood = avg(moodVals);
-      const avgEnergy = avg(energyVals);
-      // map stress index (0..4) to numeric 0..4, already is index
-      const avgStress = avg(stressVals);
+      const avgMood = (filtered.reduce((s, c) => s + parseInt(c.mood, 10), 0) / filtered.length).toFixed(1);
+      const avgEnergy = (filtered.reduce((s, c) => s + parseInt(c.energy, 10), 0) / filtered.length).toFixed(1);
+      const avgStress = (filtered.reduce((s, c) => s + parseInt(c.stress, 10), 0) / filtered.length).toFixed(1);
 
-      return { count: filtered.length, avgMood, avgEnergy, avgStress, items: filtered };
+      return `
+        <div class="info">
+          <strong>${filtered.length} Einträge</strong> in den letzten ${days} Tagen<br>
+          <strong>Stimmung:</strong> ⌀ ${avgMood}/10<br>
+          <strong>Energie:</strong> ⌀ ${avgEnergy}/10<br>
+          <strong>Stress:</strong> ⌀ ${avgStress}/10
+        </div>
+      `;
     }
 
-    function renderStatsBlock(title, value, sub) {
-      return `<div class="stat">
-                <div class="stat-label">${title}</div>
-                <div class="stat-value">${value !== null && value !== undefined ? value : '-'} </div>
-                <div class="stat-sub">${sub || ''}</div>
-              </div>`;
-    }
-
-    function renderRange(days) {
-      document.querySelectorAll('.stats-controls .tab').forEach(b => b.classList.remove('active'));
-      // activate matching button (simple)
-      const btns = document.querySelectorAll('.stats-controls .tab');
-      btns.forEach(b => { if (b.textContent.includes(days)) b.classList.add('active'); });
-
-      const s = computeStatsForRange(days);
-      const content = document.getElementById('statsContent');
-      content.innerHTML = '';
-
-      let html = '<div class="stats-grid">';
-      html += renderStatsBlock('Anzahl Checks', s.count, 'Anzahl gespeicherter Abende');
-      html += renderStatsBlock('Durchschn. Stimmung', s.avgMood ? s.avgMood.toFixed(1) + '/10' : '-', 'Frage: Stimmung');
-      html += renderStatsBlock('Durchschn. Energie', s.avgEnergy ? s.avgEnergy.toFixed(1) + '/10' : '-', 'Frage: Energie');
-      html += renderStatsBlock('Durchschn. Stress (0-4)', s.avgStress !== null ? s.avgStress.toFixed(2) : '-', '0 = entspannt, 4 = sehr gestresst');
-      html += '</div>';
-
-      // list recent entries
-      html += '<h3>Letzte Einträge</h3>';
-      html += '<ul class="check-list">';
-      s.items.slice().reverse().forEach(it => {
-        const d = new Date(it.date);
-        const mood = it.answers[1] || '-';
-        const sleep = (typeof it.answers[2] === 'number') ? it.answers[2] : it.answers[2];
-        html += `<li class="check-item"><div class="check-date">${d.toLocaleString()}</div><div class="check-summary">Stimmung: ${mood}/10</div></li>`;
+    function renderChecksList() {
+      const checks = db.get('dailyChecks');
+      checksList.innerHTML = '';
+      checks.slice().reverse().forEach(c => {
+        const li = document.createElement('li');
+        li.innerHTML = `
+          <div>
+            <strong>${c.date}</strong><br>
+            Stimmung: ${c.mood}, Energie: ${c.energy}, Stress: ${c.stress}<br>
+            <small>${c.note || '(keine Notiz)'}</small>
+          </div>
+        `;
+        checksList.appendChild(li);
       });
-      html += '</ul>';
-
-      content.innerHTML = html;
     }
 
-    function renderAll() { renderRange(7); }
-
-    // initialize buttons styles
-    document.addEventListener('DOMContentLoaded', () => {
-      // create control container class for easier selection
-      const nodes = document.querySelectorAll('.stats-controls button');
-      nodes.forEach(n => n.classList.add('tab'));
-      document.querySelector('.stats-controls button')?.classList.add('active');
-      renderAll();
+    document.getElementById('stats-form').addEventListener('submit', (e) => {
+      e.preventDefault();
+      const days = parseInt(rangeSelect.value, 10);
+      statsResult.innerHTML = computeStats(days);
     });
+
+    // Initial load
+    renderChecksList();
+    statsResult.innerHTML = computeStats(7);
   </script>
 </body>
 </html>
