Farben und Unterseiten

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <header class="welcome-header">
+    <nav>
+      <a href="check.html">Check</a>
+      <a href="todos.html">Todos</a>
+      <a href="diary.html">Tagebuch</a>
+    </nav>
     <div class="header-content">
       <h1>Herzlich Willkommen zurück, Luca</h1>
       <p>Deine persönliche Dashboard für Alltag & Wohlbefinden</p>
