--- a/check.html
+++ b/check.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header>
-    <div class="header-nav">
-      <a href="index.html" class="back-link">← Zurück</a>
-      <h1>Täglicher Check</h1>
-    </div>
+    <h1>Täglicher Check</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="todos.html">Todos</a>
+      <a href="diary.html">Tagebuch</a>
+    </nav>
   </header>
 
   <main>
