--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
   <header class="welcome-header">
-    <nav>
-      <a href="check.html">Check</a>
-      <a href="todos.html">Todos</a>
-      <a href="diary.html">Tagebuch</a>
-    </nav>
     <div class="header-content">
       <h1>Herzlich Willkommen zurück, Luca</h1>
       <p>Deine persönliche Dashboard für Alltag & Wohlbefinden</p>
     </div>
   </header>
+
+  <div class="nav-row">
+    <nav class="hub-nav">
+      <a class="hub-link" href="check.html">Täglicher Check</a>
+      <a class="hub-link" href="todos.html">Todos</a>
+      <a class="hub-link" href="diary.html">Tagebuch</a>
+    </nav>
+  </div>
 
   <main class="welcome-main">
     <div class="cards-grid">
